Prevent the showcase title bar text from wrapping to keep the size consistent

--- a/app/assets/stylesheets/ui-customizations.css.scss
+++ b/app/assets/stylesheets/ui-customizations.css.scss
@@ -221,12 +221,15 @@ h1, h2, h3, h4, h5, h6 {
 
   h2 {
     font-size: 16px;
-    text-transform: uppercase;
     font-family: GPCMed;
     font-weight: normal;
-    padding: 0;
-    margin: 0;
     letter-spacing: 1.1px;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+    white-space: nowrap;
   }
 }
 
